--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,5 @@ Maintainer: Benjamin Haibe-Kains <bhaibeka@uhnresearch.ca>
 Description: This package contains a set of functions to perform meta-analysis of breast cancer gene expressions.
 License: Artistic-2.0
 Imports:
-Depends: survival, survcomp, genefu
+Depends: inSilicoDb2, jetset.bhk, survival, survcomp, genefu
 LinkingTo:
