--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: bcmeta
+Package: MetaGx
 Type: Package
 Title: R package for meta-analysis of breast cancer gene expressions
 Version: 0.0.2
