--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: R package for meta-analysis of breast cancer gene expressions
 Version: 0.0.2
 Date: 2013-10-12
 Author: Benjamin Haibe-Kains, Pierre-Olivier Bachant-Winner
-Maintainer: Benjamin Haibe-Kains <bhaibeka@uhnresearch.ca>
+Maintainer: Benjamin Haibe-Kains <bhklab.research@gmail.com>
 Description: This package contains a set of functions to perform meta-analysis of breast cancer gene expressions.
 License: Artistic-2.0
 Imports:
