--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.0.2
 Date: 2013-12-27
 Author: Benjamin Haibe-Kains, Pierre-Olivier Bachant-Winner
 Maintainer: Benjamin Haibe-Kains <bhklab.research@gmail.com>
-Description: This package contains a set of functions to perform meta-analysis of breast cancer gene expressions.
+Description: This package contains a set of functions to perform meta-analysis of (breast) cancer gene expressions.
 License: Artistic-2.0
-Imports:
+Imports: Biobase
 Depends: Biobase, BiocGenerics, org.Hs.eg.db, inSilicoDb2, jetset.bhk, survival, survcomp, genefu, WriteXLS
-LinkingTo:
