--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,4 @@ Author: Benjamin Haibe-Kains, Pierre-Olivier Bachant-Winner
 Maintainer: Benjamin Haibe-Kains <bhklab.research@gmail.com>
 Description: This package contains a set of functions to perform meta-analysis of (breast) cancer gene expressions.
 License: Artistic-2.0
-Depends: Biobase, BiocGenerics, org.Hs.eg.db, inSilicoDb2, jetset.bhk, survival, survcomp, genefu, mRMRe, WriteXLS
+Depends: Biobase, BiocGenerics, org.Hs.eg.db, inSilicoDb2, jetset, survival, survcomp, genefu, mRMRe, WriteXLS
