--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: R package for meta-analysis of breast cancer gene expressions
 Version: 0.0.2
 Date: 2014-01-03
 Author: Benjamin Haibe-Kains, Pierre-Olivier Bachant-Winner
-Maintainer: Benjamin Haibe-Kains <bhklab.research@gmail.com>
+Maintainer: Benjamin Haibe-Kains <benjamin.haibe.kains@utoronto.ca>
 Description: This package contains a set of functions to perform meta-analysis of (breast) cancer gene expressions.
 License: Artistic-2.0
-Depends: Biobase, BiocGenerics, org.Hs.eg.db, inSilicoDb2, jetset, survival, survcomp, genefu, mRMRe, WriteXLS
+Depends: Biobase, BiocGenerics, org.Hs.eg.db, inSilicoDb, jetset, survival, survcomp, genefu, mRMRe, WriteXLS
